# memwal

./: .env.example  .gitattributes  .gitignore  .vercelignore  LICENSE  README.md  agents.md  pyproject.toml  requirements.txt  skills.md  vercel-build.sh  vercel.json
.github/workflows/: ci.yml
agents/: demo.py
api/: index.py
contracts/: Move.toml  Published.toml
contracts/sources/: registry.move
memwal/: __init__.py  checkpoint.py  config.py  sui.py  walrus.py
playground/: __init__.py  server.py
playground/static/: index.html  playground.html
playground/static/css/: base.css  dashboard.css  landing.css  tokens.css
playground/static/js/: api-tester.js  api.js  dashboard.js  file-explorer.js  landing.js  memory-explorer.js  rubiks.js  templates.js
scripts/: debug_lookup.py
tests/: conftest.py  test_memwal.py
