[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memwal"
version = "0.1.0"
description = "Portable memory for AI agents using Walrus and Sui."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Surojit Guha" },
]
dependencies = [
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pynacl>=1.5",
    "msgpack>=1.0",
    "langchain-core>=0.2.38",
    "langgraph>=0.2",
    "langgraph-checkpoint>=2.0",
    "nest-asyncio>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
llm = [
    "langchain-anthropic>=0.3",
]
playground = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/Surojit012/memwal"
Repository = "https://github.com/Surojit012/memwal"

[tool.hatch.build.targets.wheel]
packages = ["memwal"]
